# mumble

./: .gitmodules  CMakeLists.txt  macos.sh
auxiliary_files/: mumble-server.ini
cmake/: CompilerFlags.cmake  pkg-utils.cmake
cmake/modules/: FindPoco.cmake
docs/dev/build-instructions/: build_macos.md
overlay_gl/: CMakeLists.txt
src/: CMakeLists.txt
src/database/: CMakeLists.txt
src/mumble/: CMakeLists.txt
src/murmur/: CMakeLists.txt  main.cpp
src/murmur/database/: CMakeLists.txt
tap/: boost.rb  protobuf.rb  qt@5.rb  soci.rb
